<resources>
    <string name="app_name">Wordly</string>
    <string name="open_nav">Open Navigation Draver</string>
    <string name="close_nav">Close Navigation Draver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_the_meaning">Enter the meaning</string>
    <string name="enter_the_example">Enter the example</string>
    <string name="enter_the_synonym">Enter the synonym</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="interjection">Interjection</string>
    <string name="conjunction">Conjunction</string>
    <string name="preposition">Preposition</string>
    <string name="adverb">Adverb</string>
    <string name="adjective">Adjective</string>
    <string name="verb">Verb</string>
    <string name="pronoun">Pronoun</string>
    <string name="noun">Noun</string>
    <string name="word_type">Word Type:</string>
    <string name="box_color">Box Color:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>